index.html modified

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <ul>
                 <li>Inicio</li>
                 <li>+52-33-12345678</li>
-                <li><img src="/images/icon-tiktok.png" alt=""></li>
-                <li><img src="/images/icon-youtube.png" alt=""></li>
-                <li><img src="/images/icon-instagram.png" alt=""></li>
+                <li><img src="/images/icon-tiktok.png" alt="TikTok"></li>
+                <li><img src="/images/icon-youtube.png" alt="Youtube"></li>
+                <li><img src="/images/icon-instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
     </header>
